<resources>
    <string name="app_name" translatable="false">Quizz</string>
    <string name="toolbar_app_name" translatable="false">ZeQuizz</string>
    <string name="title_activity_quizz" translatable="false">ZeQuizz</string>
    <string name="online">Online :</string>
    <string name="offline">Offline :</string>
    <string name="offline_vs_ia">1 vs IA</string>
    <string name="offline_dual">1 vs 1</string>
    <string name="offline_team_dual">Team A vs Team B</string>
    <string name="online_dual">1 vs 1 Online</string>
    <string name="team">Equipe :</string>
    <string name="player">Joueur :</string>
    <string name="lives">Vies :</string>
    <string name="score">Score :</string>
    <string name="question">De quel animal est-ce le cri ?</string>
    <string name="value">Valeur: </string>

    <string name="value_value" translatable="false">5 points</string>
    <string name="team_value" translatable="false">B</string>
    <string name="lives_value" translatable="false">3</string>
    <string name="player_value" translatable="false">Lucie</string>
    <string name="score_value" translatable="false">18</string>

    <string name="dog">Chien</string>
    <string name="cat">Chat</string>
    <string name="horse">Cheval</string>
    <string name="cow">Vache</string>
    <string name="action_settings" translatable="false">Settings</string>
</resources>
